@@ -1,7 +1,7 @@
 {
   "/api/*": {
     "target": "http://localhost:9005",
-    "secure": true,
+    "secure": false,
     "changeOrigin": true
   }
 }
