@@ -78,7 +78,7 @@
 </ng-template>
 
 <ng-template #noShopTemplate>
-    <h6 class="text-center">Shop is not found.</h6>
+    <h6 class="my-5 py-5 text-center">Shop is not found!</h6>
 </ng-template>
 <ng-template #noItemTemplate>
     <h6 class="text-center" style="padding: 6rem 0;">No item</h6>
