@@ -14,10 +14,10 @@
 
         .merchant__profile {
             position: absolute;
-            top: 25px;
-            left: 72px;
-            width: 138px;
-            height: 138px;
+            top: 24px;
+            left: 71px;
+            width: 140px;
+            height: 140px;
             border-radius: 50%;
             z-index: 1;
         }
