@@ -80,7 +80,9 @@
                 </div>
             </div>
             <div class="qrcode__container center col-auto mb-4 mt-3 pl-lg-3 order-1 order-lg-12">
-                <div class="qrcode border p-3"></div>
+                <div class="qrcode border p-3">
+                    <ws-spinner style='line-height: 150px' class="text-center d-block" *ngIf="isQrcodeLoading.isRunning()"></ws-spinner>
+                </div>
             </div>
         </div>
         <div class="d-block" *ngIf="isShownLocation">
@@ -95,7 +97,9 @@
 <ws-modal [id]="'qr-code'" *ngIf="isQRCodeModalOpened" [maxWidth]="310" [(isOpened)]="isQRCodeModalOpened" (isOpenedChange)="showQrcode()">
     <div modalBody class="row no-gutters">
         <div class="qrcode__container mb-4 mt-3 col-auto center">
-            <div class="qrcode border p-3"></div>
+            <div class="qrcode border p-3">
+                <ws-spinner style='line-height: 150px' class="text-center d-block" *ngIf="isQrcodeLoading.isRunning()"></ws-spinner>
+            </div>
         </div>
         <div class="social-media__container row no-gutters col-sm px-4" *ngIf="element?.media?.length">
             <div class="row no-gutters mb-2" *ngIf="medias?.facebook?.length">
