@@ -30,11 +30,12 @@ export class FloatBannerComponent implements OnInit {
   shareLinkThroughEmail: string;
   medias;
   saved: boolean;
+  isQrcodeLoading: WsLoading = new WsLoading;
   private ngUnsubscribe: Subject<any> = new Subject;
   constructor(private facebookService: FacebookService,
     private authFollowService: AuthFollowService,
     private sharedUserService: SharedUserService
-    ) { 
+  ) {
     let initParams: InitParams = {
       appId: environment.FACEBOOK_APP_ID,
       xfbml: true,
@@ -44,7 +45,7 @@ export class FloatBannerComponent implements OnInit {
   }
 
   ngOnInit(): void {
-    
+
   }
   ngOnChanges(changes: SimpleChanges) {
     if (changes && this.element) {
@@ -84,86 +85,86 @@ export class FloatBannerComponent implements OnInit {
   }
   saveShop() {
     combineLatest(timer(500),
-    this.authFollowService.followShop(this.element._id))
-    .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      this.saved = result['result'];
-    });
+      this.authFollowService.followShop(this.element._id))
+      .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
+        this.saved = result['result'];
+      });
   }
   saveItem() {
     combineLatest(timer(500),
-    this.authFollowService.followItem(this.element._id))
-    .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      this.saved = result['result'];
-      let followItems = this.sharedUserService.followItems.value;
-      followItems = _.uniq(followItems);
-      followItems.push(this.element._id);
-      this.sharedUserService.followItems.next(followItems);
-    });
+      this.authFollowService.followItem(this.element._id))
+      .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
+        this.saved = result['result'];
+        let followItems = this.sharedUserService.followItems.value;
+        followItems = _.uniq(followItems);
+        followItems.push(this.element._id);
+        this.sharedUserService.followItems.next(followItems);
+      });
   }
   unsaveShop() {
     combineLatest(timer(500),
-    this.authFollowService.unfollowShop(this.element._id))
-    .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      this.saved = result['result'];
-    });
+      this.authFollowService.unfollowShop(this.element._id))
+      .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
+        this.saved = result['result'];
+      });
   }
   unsaveItem() {
     combineLatest(timer(500),
-    this.authFollowService.unfollowItem(this.element._id))
-    .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      this.saved = result['result'];
-      let followItems = this.sharedUserService.followItems.value;
-      followItems = _.filter(followItems, (id) => id != this.element._id);
-      this.sharedUserService.followItems.next(followItems);
-    });
+      this.authFollowService.unfollowItem(this.element._id))
+      .pipe(map(x => x[1]), takeUntil(this.ngUnsubscribe)).subscribe(result => {
+        this.saved = result['result'];
+        let followItems = this.sharedUserService.followItems.value;
+        followItems = _.filter(followItems, (id) => id != this.element._id);
+        this.sharedUserService.followItems.next(followItems);
+      });
   }
   shareThroughFB() {
     let params: UIParams = {
-        href: this.shareLinkThroughFB,
-        method: 'share',
-        display: 'popup'
+      href: this.shareLinkThroughFB,
+      method: 'share',
+      display: 'popup'
     }
     this.facebookService.ui(params)
-    .then(response => {
-      console.log(response);
-    })
-    .catch(err => {});
+      .then(response => {
+        console.log(response);
+      })
+      .catch(err => { });
   }
   showQrcode() {
     $(() => {
-      QRCodeBuilder.createQRcode('.qrcode', this.element['username'], this.element._id, { width: 150, height: 150});
-      $(() => {
-        let image = <HTMLImageElement>document.createElement('img');
-        image.crossOrigin = 'anonymous';
-        image.src = environment.IMAGE_URL + this.element.profileImage;
-        image.alt = 'profile-image';
-        image.addEventListener('load', e => {
-          setTimeout(() => {
+      this.isQrcodeLoading.start();
+      let image = <HTMLImageElement>document.createElement('img');
+      image.crossOrigin = 'Anonymous';
+      image.src = environment.IMAGE_URL + this.element.profileImage;
+      image.alt = 'profile-image';
+      image.addEventListener('load', e => {
+        QRCodeBuilder.createQRcode('.qrcode', this.element['username'], { width: 150, height: 150 })
+          .then(() => {
             this.renderProfileImageToQrcode(image, 150);
-          }, 500);
-        });
+            this.isQrcodeLoading.stop();
+          });
       });
     });
   }
   renderProfileImageToQrcode(image, size) {
     let canvas = document.getElementById('canvas1');
     if (canvas) {
-      let context =(<HTMLCanvasElement>canvas).getContext('2d');
-      let width = size / 3 * 185 / 300;
-      let height = size / 3 * 185 / 300;
+      let context = (<HTMLCanvasElement>canvas).getContext('2d');
+      let width = size / 3 * 190 / 300;
+      let height = size / 3 * 190 / 300;
       let offsetyY = size * 9 / 300;
-      let offsetX = size/2 - width/2;
-      let offsetY = size/2 - height/2 - offsetyY;
+      let offsetX = size / 2 - width / 2;
+      let offsetY = size / 2 - height / 2 - offsetyY;
       context.save();
       context.beginPath();
-      context.arc(offsetX + width/2, offsetY + width/2, width/2, 0, 2*Math.PI);
+      context.arc(offsetX + width / 2, offsetY + width / 2, width / 2, 0, 2 * Math.PI);
       context.fill();
       context.clip();
       context.drawImage(image, offsetX, offsetY, width, height);
       context.restore();
     }
   }
-  ngOnDestroy(){
+  ngOnDestroy() {
     this.ngUnsubscribe.next();
     this.ngUnsubscribe.complete();
   }
