@@ -1,5 +1,5 @@
 <div class="page__image mb-1 p-1">
-    <img [routerLink]="['/shop']" [queryParams]="{id: item?._id}" class="w-100 h-100" style="object-fit: contain;" *ngIf="item?.profileImage" [src]="environment.IMAGE_URL + item.profileImage" alt="{{ 'item' + index }}" />
+    <img [routerLink]="['/shop', item?.username]" class="w-100 h-100" style="object-fit: contain;" *ngIf="item?.profileImage" [src]="environment.IMAGE_URL + item.profileImage" alt="{{ 'item' + index }}" />
     <span *ngIf="removable" (click)="removeFollow()" class="page__remove-icon fas fa-times"></span>
     <span *ngIf="savable" [class.selected]="follow" (click)="followClicked($event)" class="page__favorite-icon fas fa-heart"></span>
 </div>
