@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-06-05                                -
+---------------------------------------------
+.: WSW: Task: QR code image slow render issue (WSW-25)
+
+---------------------------------------------
 - 2020-05-30                                -
 ---------------------------------------------
 .: WSW: Task: Update shop page layout (WSW-2)
